# flexnpu

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: agent.conf  entrypoint.sh  nginx.conf
src/: __init__.py  app.py
web/: .umirc.ts  package-lock.json  package.json
web/src/pages/dashboard/: index.tsx
web/src/pages/deploy/: index.tsx
web/src/pages/scale/: index.tsx
web/src/services/status/: index.ts
